Big update with scala code and python code for the sensor stream processor.